# renix

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: step-12-checklist.md  step-12-complete.txt  step-12-full.txt  step-12-mcpagent.md
config/: .env.example  config.yaml
core/: __init__.py  graph.py  interfaces.py  state.py  utils.py
core/nodes/: __init__.py  listen.py  orchestrator.py  respond.py  route.py  scheduler.py  transcribe.py
data/: .gitkeep
docs/: AGENTS.md  CONTRIBUTING.md  INITIAL_PLAN_2026-03-12.md  architecture.md
docs/adr/: 0001-langgraph-as-orchestrator.md  0002-single-user-facing-agent.md  0003-openai-compat-api.md
docs/modules/: agents.md  audio.md  graph.md  orchestrator.md  route.md  scheduler.md  stt.md  tools.md  tts.md  wake_word.md
logs/: .gitkeep
modules/: __init__.py
modules/agents/: __init__.py  mcp_agent.py  memory_agent.py  tool_use_agent.py
modules/audio/: __init__.py  device_manager.py  recorder.py
modules/stt/: transcriber.py
modules/tools/: __init__.py  registry.py
modules/tts/: speaker.py
modules/wake_word/: __init__.py  detector.py
tests/: __init__.py
tests/integration/: test_graph_proactive.py  test_graph_reactive.py
tests/unit/: test_agent_registry.py  test_config.py  test_device_manager.py  test_interfaces.py  test_mcp_agent.py  test_memory_agent.py  test_route_node.py  test_speaker.py  test_state.py  test_tool_registry.py  (+2 more)
(+3 files in other folders)
