[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "renix"
version = "0.1.0"
description = "Renix — locally-running, modular AI voice assistant orchestrated by LangGraph"
authors = [{ name = "Radixen" }]
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["core", "modules"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "soundfile.*",
    "openwakeword.*",
    "faster_whisper.*",
    "pyttsx3.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=core --cov=modules --cov-report=term-missing"
